# mav-dashboard

./: .gitignore  Dockerfile  README.md  deploy.sh  deploy_fresh.sh  deploy_long_running.sh
analytics/: README.md  mav_analytics_library.py  mav_route_analysis.ipynb  mav_route_histogram_analysis.ipynb  max_map.py  requirements.txt  run_batch_analysis.py  run_mav_analysis.py  station_stats.ipynb  test_map_generation.py
dashboard/: README.md  requirements.txt  test_data_joining.py
dashboard_web/: README.md  index.html  package-lock.json  package.json
ends/: budapest_rajka_routes_20250715_221609.csv  mav_all_routes_20250715_221609.csv  mav_route_extractor.ipynb  mav_route_extractor_v2.ipynb  mav_route_extractor_v3.ipynb  mav_unique_pairs_20250715_221609.csv
map_generator_refactored/: Dockerfile  README.md  __init__.py  cli.py  deploy_job.sh  entrypoint.sh  generate_maps.py  pyproject.toml  requirements.txt
map_generator_refactored/analytics/: __init__.py  mav_analytics_library.py  run_batch_analysis.py
map_generator_refactored/analytics/visualizers/: __init__.py  delay_map_visualizer.py  max_delay_map_visualizer.py
map_generator_refactored/loaders/: __init__.py  bulk_loader.py  data_joiner.py  route_loader.py
map_generator_refactored/visualizers/: __init__.py  delay_map_visualizer.py  max_delay_map_visualizer.py
map_v2/: example.json  extract_route_pairs.py  fetch_all_rail_routes.py  mav_rail_fetcher.py  routes.json  test_10_routes.py  test_json.py
mav/: 2024-mav.txt  ctrl.txt  hungarian_ocr_processor.py  pdf_ocr_processor.py  report_2024_extracted.txt  (+2 more)
(+70 files in other folders)
