[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "map_generator_refactored"
version = "0.1.0"
description = "MAV maps and analytics CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "folium>=0.14.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "google-cloud-storage>=2.0.0",
]

[project.scripts]
mav-run = "map_generator_refactored.cli:main"


